--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+.nu-header {
+  display: flex;
+  background-color: rgba(248, 249, 250, 1);
+  box-shadow: 0px 4px 32px -12px rgba(0, 0, 0, 0.25);
+  height: 88px;
+  align-items: center;
+  justify-content: space-around;
+  font-family: "Nunito";
+  font-weight: 900;
+  font-size: 25px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nu-span {
+  color: rgba(33, 37, 41, 1);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nu-h1 {
+  color: rgba(253, 55, 126, 1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-button {
+  padding: 15px;
+  width: 64px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: rgba(233, 236, 239, 1);
+  color: rgba(134, 142, 150, 1);
+  font-family: "Nunito";
+  font-weight: 600;
+  border-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.divide-div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (min-width: 768px) {
+  .divide-div {
+    flex-direction: row;
+    align-items: initial;
+    margin-left: 100px;
+    margin-right: 100px;
+    justify-content: center;
   }
 }
